add factory method, changes in decorator